--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -369,9 +369,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:paddingLeft="8dp"
                 android:paddingBottom="16dp"
-                >
+                android:paddingLeft="8dp">
 
                 <RadioButton
                     android:id="@+id/q7a1"
@@ -420,18 +419,18 @@
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:onClick="result"
-               android:layout_marginLeft="8dp"
+                android:layout_marginLeft="8dp"
                 android:layout_marginRight="32dp"
-                android:background="@drawable/rounded_button"
+                android:background="@drawable/roundedbutton"
+                android:onClick="result"
                 android:text="@string/submitButton" />
 
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:onClick="clear"
                 android:layout_marginLeft="64dp"
-                android:background="@drawable/rounded_button"
+                android:background="@drawable/roundedbutton"
+                android:onClick="clear"
                 android:text="@string/restartButton" />
 
 
